--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 title: 读立写生
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "陈素封|读而立·写而生"  
+description: "黄欣光|读而立·写而生"  
 baseurl: ""
-url: "http://cnfeat"  
+url: "http://huangxinguang.github.com"  
 
 # About/contact
 owner: 
-  name: " CnFeat"
-  email: CnFeat@gmail.com
+  name: " huangxinguang"
+  email: hxguang911219@gmail.com
   bio: "写就是写的报酬"
 
 # Data
@@ -33,7 +33,7 @@ paginate: 8
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone: Asia/Shanghai
+timezone: Asia/Shenzhen
 
 # Defaults for posts
 defaults:
@@ -43,7 +43,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "CnFeat"
+      author: "huangxinguang"
       header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
