--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 读立写生
+title: Talk is cheap. Show me the code
 header-img: "img/green.jpg"
 tagline: "cn"  
 description: "黄欣光|读而立·写而生"  
@@ -10,7 +10,7 @@ url: "http://huangxinguang.github.com"
 owner: 
   name: " huangxinguang"
   email: hxguang911219@gmail.com
-  bio: "写就是写的报酬"
+  bio: "Talk is cheap. Show me the code"
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
@@ -18,10 +18,10 @@ favicon: img/favicon.png
 
 douban_username:  
 twitter_username: 
-github_username: 
+github_username: huangxinguang
 facebook_username: 
-weibo_username: 
-zhihu_username: 
+weibo_username: 黄欣光plus
+zhihu_username: 黄欣光
 
 # Build settings  
 # use Github Flavored Markdown !important  
