--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Talk is cheap. Show me the code
+title: huangxinguang
 header-img: "img/green.jpg"
 tagline: "cn"  
 description: "黄欣光|读而立·写而生"  
