--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: hxguang
-header-img: "img/green.jpg"
+header-img: "img/study.jpg"
 tagline: "cn"  
 description: "黄欣光|读而立·写而生"  
 baseurl: ""
