--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ defaults:
     values:
       layout: "post"
       author: "huangxinguang"
-      header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
+      header-img: "img/study.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
