--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Talk is cheap. Show me the code
+title: "首页"
 header-img: "img/study.jpg"
 tagline: "cn"  
 description: "黄欣光|读而立·写而生"  
@@ -14,7 +14,7 @@ owner:
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
-favicon: img/favicon.png
+favicon: img/dolphin.gif
 
 douban_username:  
 twitter_username: 
