修改页面展示

--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 title: "以前是人养狗看家，现在是养狗陪人散步"
 header-img: "img/study.jpg"
 tagline: "cn"  
-description: "黄欣光|读而立·写而生"  
+description: "talk is cheap.show me the code."
 baseurl: ""
 url: "http://huangxinguang.github.com"  
 
 # About/contact
 owner: 
-  name: " 以前是人养狗看家，现在是养狗陪人散步"
+  name: "hxguang"
   email: hxguang911219@gmail.com
   bio: "以前是人养狗看家，现在是养狗陪人散步"
 
