修改页面展示

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "以前是人养狗看家，现在是养狗陪人散步"
+title: "starlight"
 header-img: "img/study.jpg"
 tagline: "cn"  
 description: "talk is cheap.show me the code."
