--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ owner:
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
-favicon: img/dolphin.gif
+favicon: img/favicon.ong
 
 douban_username:  
 twitter_username: 
